--- a/CustomActivitesSPoint/CustomActivitesSPoint/CustomActivitesSPoint.csproj
+++ b/CustomActivitesSPoint/CustomActivitesSPoint/CustomActivitesSPoint.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTableUitility.cs" />
+    <Compile Include="UpdateRecordByColumn.cs" />
     <Compile Include="GetDataTableByListName.cs" />
     <Compile Include="ListItemOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
